Fix context nav menu icon alignment regression

--- a/chrome/popup/popup.css
+++ b/chrome/popup/popup.css
@@ -117,6 +117,11 @@ menuseparator
 	border-radius: 99px !important;
 }
 
+#context-navigation .menu-iconic-icon
+{
+	margin: 0 !important;
+}
+
 #context-back,
 #context-forward
 {
